# chatbot-RAG-chroma-vector-db-with-streamlit

./: .gitignore  README.md  app.py  get_llm_features.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_streamlit.yml
chatbot_databeez/: vectordb.py
chatbot_rag_chroma/: load.py  preprocess.py  prompt.py  vectordb.py
chatbot_rag_chroma/data_processing/: load.py  preprocess.py  scraping_module.py  website_structure.json
chatbot_rag_chroma/models/: ai_model.py
chatbot_rag_chroma/prompts/: prompt.py
chatbot_rag_chroma/vector_db/: vectordb.py
chroma_data/: chroma.sqlite3
chroma_data/3daa21e3-b5c8-4e35-b9b6-2b2df4a928df/: index_metadata.pickle
data/: architecture_project.txt
parse_html_structure/: scrap_html_structure.ipynb
