[tool.poetry]
name = "chatbot-databeez"
version = "0.1.0"
description = ""
authors = ["hmakumbu <hmboko@aimsammi.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
streamlit = "^1.35.0"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
fastembed = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
